[package]
name = "okane"
version = "0.0.0"
description = "Budget App"
authors = ["Kevin D Goveas"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.17"
chrono = "0.4.24"
tauri = { version = "1.2", features = ["shell-open"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
